# dynamic-array

./: .gitignore  CMakeLists.txt
include/: dynamic_array.h
src/: dynamic_array.c  main.c
